# bevy_lookup_curve

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
assets/: example.curve.ron  nasty.curve.ron
benches/: knot_search.rs  lookup_curve.rs
examples/: animation.rs  dev.rs  egui_only.rs  inspector_egui.rs
src/: asset.rs  editor.rs  inspector.rs  knot_search.rs  lib.rs
src/editor/: editor_bevy.rs  editor_egui.rs  mod.rs
