[package]
name = "bevy_lookup_curve"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
description = "Editable lookup curve for Bevy"
homepage = "https://crates.io/crates/bevy_lookup_curve"
documentation = "https://docs.rs/bevy_lookup_curve"
repository = "https://github.com/villor/bevy_lookup_curve"
readme = "README.md"
version = "0.2.1"
edition = "2021"

[features]
default = ['editor']
editor = ['dep:egui', 'dep:bevy_egui']
inspector-egui = ['editor', 'dep:bevy-inspector-egui', 'dep:egui_plot']

[dependencies]
# core
bevy_app = "0.14"
bevy_math = "0.14"
bevy_ecs = "0.14"
bevy_reflect = { version = "0.14", features = ['bevy'] }
bevy_log = "0.14"

# asset
bevy_asset = "0.14"
ron = "0.8"
thiserror = "1.0"
serde = "1.0"

# egui editor
egui = { version = "0.28", optional = true }
bevy_egui = { version = "0.28", default-features = false, features = ["render"], optional = true }

# egui inspector
bevy-inspector-egui = { version = "0.25.0", default-features = false, features = ["bevy_render"], optional = true }
egui_plot = { version = "0.28", optional = true }

[dev-dependencies]
bevy = "0.14"
bevy-inspector-egui = "0.25.0"
criterion = "0.5.1"
rand = "0.8.5"

[[example]]
name = "dev"
path = "examples/dev.rs"
required-features = ["editor"]

[[example]]
name = "animation"
path = "examples/animation.rs"
required-features = ["editor"]

# [[bench]]
# name = "lookup_curve"
# path = "benches/lookup_curve.rs"
# harness = false

[[bench]]
name = "knot_search"
path = "benches/knot_search.rs"
harness = false
